--- a/magic_queries.ipynb
+++ b/magic_queries.ipynb
@@ -13,33 +13,32 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: ipython-sql in /opt/conda/lib/python3.10/site-packages (0.5.0)\n",
-      "Requirement already satisfied: prettytable in /opt/conda/lib/python3.10/site-packages (from ipython-sql) (3.12.0)\n",
-      "Requirement already satisfied: ipython in /opt/conda/lib/python3.10/site-packages (from ipython-sql) (8.8.0)\n",
-      "Requirement already satisfied: sqlalchemy>=2.0 in /opt/conda/lib/python3.10/site-packages (from ipython-sql) (2.0.36)\n",
-      "Requirement already satisfied: sqlparse in /opt/conda/lib/python3.10/site-packages (from ipython-sql) (0.5.1)\n",
+      "Requirement already satisfied: sqlalchemy>=2.0 in /opt/conda/lib/python3.10/site-packages (from ipython-sql) (2.0.7)\n",
       "Requirement already satisfied: six in /opt/conda/lib/python3.10/site-packages (from ipython-sql) (1.16.0)\n",
       "Requirement already satisfied: ipython-genutils in /opt/conda/lib/python3.10/site-packages (from ipython-sql) (0.2.0)\n",
-      "Requirement already satisfied: typing-extensions>=4.6.0 in /opt/conda/lib/python3.10/site-packages (from sqlalchemy>=2.0->ipython-sql) (4.12.2)\n",
-      "Requirement already satisfied: greenlet!=0.4.17 in /opt/conda/lib/python3.10/site-packages (from sqlalchemy>=2.0->ipython-sql) (2.0.1)\n",
+      "Requirement already satisfied: sqlparse in /opt/conda/lib/python3.10/site-packages (from ipython-sql) (0.4.4)\n",
+      "Requirement already satisfied: ipython in /opt/conda/lib/python3.10/site-packages (from ipython-sql) (8.11.0)\n",
+      "Requirement already satisfied: prettytable in /opt/conda/lib/python3.10/site-packages (from ipython-sql) (3.7.0)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in /opt/conda/lib/python3.10/site-packages (from sqlalchemy>=2.0->ipython-sql) (2.0.2)\n",
+      "Requirement already satisfied: typing-extensions>=4.2.0 in /opt/conda/lib/python3.10/site-packages (from sqlalchemy>=2.0->ipython-sql) (4.5.0)\n",
+      "Requirement already satisfied: pickleshare in /opt/conda/lib/python3.10/site-packages (from ipython->ipython-sql) (0.7.5)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.37,<3.1.0,>=3.0.30 in /opt/conda/lib/python3.10/site-packages (from ipython->ipython-sql) (3.0.38)\n",
+      "Requirement already satisfied: pexpect>4.3 in /opt/conda/lib/python3.10/site-packages (from ipython->ipython-sql) (4.8.0)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in /opt/conda/lib/python3.10/site-packages (from ipython->ipython-sql) (2.14.0)\n",
+      "Requirement already satisfied: traitlets>=5 in /opt/conda/lib/python3.10/site-packages (from ipython->ipython-sql) (5.9.0)\n",
+      "Requirement already satisfied: matplotlib-inline in /opt/conda/lib/python3.10/site-packages (from ipython->ipython-sql) (0.1.6)\n",
       "Requirement already satisfied: backcall in /opt/conda/lib/python3.10/site-packages (from ipython->ipython-sql) (0.2.0)\n",
       "Requirement already satisfied: decorator in /opt/conda/lib/python3.10/site-packages (from ipython->ipython-sql) (5.1.1)\n",
-      "Requirement already satisfied: jedi>=0.16 in /opt/conda/lib/python3.10/site-packages (from ipython->ipython-sql) (0.18.2)\n",
-      "Requirement already satisfied: matplotlib-inline in /opt/conda/lib/python3.10/site-packages (from ipython->ipython-sql) (0.1.6)\n",
-      "Requirement already satisfied: pickleshare in /opt/conda/lib/python3.10/site-packages (from ipython->ipython-sql) (0.7.5)\n",
-      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.11 in /opt/conda/lib/python3.10/site-packages (from ipython->ipython-sql) (3.0.36)\n",
-      "Requirement already satisfied: pygments>=2.4.0 in /opt/conda/lib/python3.10/site-packages (from ipython->ipython-sql) (2.14.0)\n",
       "Requirement already satisfied: stack-data in /opt/conda/lib/python3.10/site-packages (from ipython->ipython-sql) (0.6.2)\n",
-      "Requirement already satisfied: traitlets>=5 in /opt/conda/lib/python3.10/site-packages (from ipython->ipython-sql) (5.8.0)\n",
-      "Requirement already satisfied: pexpect>4.3 in /opt/conda/lib/python3.10/site-packages (from ipython->ipython-sql) (4.8.0)\n",
-      "Requirement already satisfied: wcwidth in /opt/conda/lib/python3.10/site-packages (from prettytable->ipython-sql) (0.2.5)\n",
+      "Requirement already satisfied: jedi>=0.16 in /opt/conda/lib/python3.10/site-packages (from ipython->ipython-sql) (0.18.2)\n",
+      "Requirement already satisfied: wcwidth in /opt/conda/lib/python3.10/site-packages (from prettytable->ipython-sql) (0.2.6)\n",
       "Requirement already satisfied: parso<0.9.0,>=0.8.0 in /opt/conda/lib/python3.10/site-packages (from jedi>=0.16->ipython->ipython-sql) (0.8.3)\n",
       "Requirement already satisfied: ptyprocess>=0.5 in /opt/conda/lib/python3.10/site-packages (from pexpect>4.3->ipython->ipython-sql) (0.7.0)\n",
       "Requirement already satisfied: executing>=1.2.0 in /opt/conda/lib/python3.10/site-packages (from stack-data->ipython->ipython-sql) (1.2.0)\n",
       "Requirement already satisfied: asttokens>=2.1.0 in /opt/conda/lib/python3.10/site-packages (from stack-data->ipython->ipython-sql) (2.2.1)\n",
       "Requirement already satisfied: pure-eval in /opt/conda/lib/python3.10/site-packages (from stack-data->ipython->ipython-sql) (0.2.2)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+      "\u001b[33mWARNING: There was an error checking the latest version of pip.\u001b[0m\u001b[33m\n",
+      "\u001b[0m"
      ]
     }
    ],
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "cb279e1e-d250-49af-97af-f7f447b7e272",
    "metadata": {
     "tags": []
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9c2a6255-e728-4eb7-90ad-495bb3d639d0",
    "metadata": {
     "tags": []
@@ -88,7 +87,7 @@
        "'postgresql://reader:Miba2021@10.129.0.25/demo'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,8 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "76e58193-8d29-4178-8886-e0d0c2f466c3",
+   "execution_count": 5,
+   "id": "243698fb-8ad7-4c86-b9d4-c0c84522616f",
    "metadata": {
     "tags": []
    },
@@ -215,7 +214,7 @@
        " (16384, 'demo', 10, 6, 'en_US.UTF-8', 'en_US.UTF-8', False, True, -1, 13759, '726', '1', 1663, '{=Tc/postgres,postgres=CTc/postgres,reader=c/postgres}')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "6ea6ccfe-250a-4a29-b41a-760e9ecc20cc",
    "metadata": {
     "tags": []
@@ -249,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "0c2ad5a8-8005-4bd9-af12-bdbfb70310cb",
    "metadata": {
     "tags": []
@@ -307,7 +306,7 @@
        " ('AER', '319')]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "a829fdfd-d79b-4ca5-befc-af112b22d81b",
    "metadata": {
     "tags": []
@@ -410,9 +409,430 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b8455e18-a582-4b1b-ae2d-474ffa018d8c",
+   "metadata": {},
+   "source": [
+    "***Query 1 Which fare conditions are available for flights from AER to SVO***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fb7da663-0244-49c1-8a11-72b662a1d872",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://reader:***@10.129.0.25/demo\n",
+      "3 rows affected.\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = %sql SELECT distinct fare_conditions FROM ticket_flights tf \\\n",
+    "           JOIN flights f ON f.flight_id = tf.flight_id \\\n",
+    "           WHERE f.arrival_airport = 'SVO' AND departure_airport = 'AER'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "aed375f8-19c8-4fe3-850f-657946fc9b26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>fare_conditions</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Business</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Comfort</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Economy</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Business',), ('Comfort',), ('Economy',)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87ee64b6-afa3-4812-84a1-c3d77ea7185a",
+   "metadata": {},
+   "source": [
+    "***Query 2 A list of aircraft models which fly to the Yakutsk AND Abakan cities***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "9b3390f1-db7b-4e2e-ae2f-d9b1766ebdb9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://reader:***@10.129.0.25/demo\n",
+      "1 rows affected.\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = %sql SELECT DISTINCT model FROM aircrafts a \\\n",
+    "          JOIN flights f ON f.aircraft_code = a.aircraft_code \\\n",
+    "          JOIN airports ap ON ap.airport_code = f.departure_airport \\\n",
+    "          WHERE ap.city IN ('Yakutsk', 'Abakan') \\\n",
+    "          GROUP BY model \\\n",
+    "          HAVING COUNT(DISTINCT ap.city) = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ae363313-2ce1-4ef9-95ad-a3c46d7ecce2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>model</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Airbus A319-100</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Airbus A319-100',)]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb9c92d6-0944-4951-9c75-dc2bfde742a3",
+   "metadata": {},
+   "source": [
+    "***Query 3 A list of aircraft models which fly to the Yakutsk OR Abakan cities***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "1a6a3adb-1dd1-4d5b-b8ef-fc2ce563397e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://reader:***@10.129.0.25/demo\n",
+      "5 rows affected.\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = %sql SELECT DISTINCT model FROM aircrafts a \\\n",
+    "      JOIN flights f ON f.aircraft_code = a.aircraft_code \\\n",
+    "      JOIN airports ap ON ap.airport_code = f.departure_airport \\\n",
+    "      WHERE city IN ('Yakutsk', 'Abakan')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d78ff0f3-1d55-44e3-a53d-4a8deedcb4b4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>model</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Bombardier CRJ-200</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Sukhoi Superjet-100</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Airbus A319-100</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Cessna 208 Caravan</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Boeing 737-300</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Bombardier CRJ-200',),\n",
+       " ('Sukhoi Superjet-100',),\n",
+       " ('Airbus A319-100',),\n",
+       " ('Cessna 208 Caravan',),\n",
+       " ('Boeing 737-300',)]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52b9bb60-384d-44d5-9638-0fd7ac5fe4ac",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "***Query 4 A list of aircrafts which DON’T fly to Yakutsk city***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a1d159ee-4631-4eee-8a61-b53f9386bd06",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://reader:***@10.129.0.25/demo\n",
+      "5 rows affected.\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = %sql SELECT DISTINCT model FROM aircrafts a \\\n",
+    "            JOIN flights f ON f.aircraft_code = a.aircraft_code \\\n",
+    "            JOIN airports ap ON ap.airport_code = f.arrival_airport \\\n",
+    "            WHERE a.aircraft_code NOT IN( \\\n",
+    "                SELECT aircraft_code FROM flights \\\n",
+    "                WHERE arrival_airport IN(\\\n",
+    "                    SELECT airport_code FROM airports WHERE city = 'Yakutsk') \\\n",
+    "                OR departure_airport IN(\\\n",
+    "                    SELECT airport_code FROM airports WHERE city = 'Yakutsk'))\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3d521b9d-8485-4555-b151-e22570ad05f1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>model</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Boeing 767-300</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Cessna 208 Caravan</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Boeing 737-300</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Airbus A321-200</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Boeing 777-300</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Boeing 767-300',),\n",
+       " ('Cessna 208 Caravan',),\n",
+       " ('Boeing 737-300',),\n",
+       " ('Airbus A321-200',),\n",
+       " ('Boeing 777-300',)]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "146d57c1-4e7b-443f-9050-bd8422ac600a",
+   "metadata": {},
+   "source": [
+    "***Query 5 Find out airport codes related to Mrs. ELLA DMITRIEVA  - from where and to where she flew.***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "895ac0fe-512d-4daa-8378-f85995cb3880",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://reader:***@10.129.0.25/demo\n",
+      "7 rows affected.\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = %sql SELECT departure_airport, arrival_airport FROM flights f\\\n",
+    "            JOIN ticket_flights tf ON tf.flight_id = f.flight_id \\\n",
+    "            JOIN tickets t ON t.ticket_no = tf.ticket_no \\\n",
+    "            WHERE passenger_name = 'ELLA DMITRIEVA'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "55ab515b-acaa-41f0-8112-73f554dedeef",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>departure_airport</th>\n",
+       "            <th>arrival_airport</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>DME</td>\n",
+       "            <td>HMA</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>HMA</td>\n",
+       "            <td>DME</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>DME</td>\n",
+       "            <td>UUS</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>SVO</td>\n",
+       "            <td>SVX</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>SVX</td>\n",
+       "            <td>SVO</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>SVX</td>\n",
+       "            <td>MQF</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>MQF</td>\n",
+       "            <td>SVX</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('DME', 'HMA'),\n",
+       " ('HMA', 'DME'),\n",
+       " ('DME', 'UUS'),\n",
+       " ('SVO', 'SVX'),\n",
+       " ('SVX', 'SVO'),\n",
+       " ('SVX', 'MQF'),\n",
+       " ('MQF', 'SVX')]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4821b0bc-7126-4725-9f90-3e5ff904a72d",
+   "id": "f48733e7-ba3c-4a5c-b510-69c048e223d5",
    "metadata": {},
    "outputs": [],
    "source": []
