--- a/queries.ipynb
+++ b/queries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "15d408a7-8e2e-475e-a584-4662f99cb230",
    "metadata": {
     "tags": []
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "90e66ebb-2de8-45f4-a6ac-917b97313e00",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "6e353114-21f8-4513-bfde-dd5acd2674af",
    "metadata": {
     "tags": []
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "0c28cc30-c6c7-44d0-89eb-5339f07a190f",
    "metadata": {
     "tags": []
@@ -139,7 +139,7 @@
        "6             AER           319"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "3361f674-418c-4d3a-b859-864de248d0fe",
    "metadata": {
     "tags": []
@@ -587,7 +587,10 @@
     "query = \"SELECT DISTINCT model FROM aircrafts \\\n",
     "         WHERE aircraft_code NOT IN( \\\n",
     "             SELECT aircraft_code FROM flights \\\n",
-    "             WHERE departure_airport IN (\\\n",
+    "             WHERE arrival_airport IN (\\\n",
+    "                 SELECT airport_code FROM airports\\\n",
+    "                 WHERE city = 'Yakutsk') \\\n",
+    "             OR departure_airport IN(\\\n",
     "                 SELECT airport_code FROM airports\\\n",
     "                 WHERE city = 'Yakutsk'))\"\n",
     "res = get_query(query)"
@@ -595,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "06901943-8fdc-4a32-96e9-30e8201268ad",
    "metadata": {
     "tags": []
@@ -664,7 +667,7 @@
        "5  Cessna 208 Caravan"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
