--- a/magic_queries.ipynb
+++ b/magic_queries.ipynb
@@ -239,21 +239,7 @@
       " * postgresql://reader:***@10.129.0.25/demo\n",
       "7 rows affected.\n"
      ]
-    }
-   ],
-   "source": [
-    "res = %sql SELECT DISTINCT arrival_airport, aircraft_code FROM flights f \\\n",
-    "            WHERE f.arrival_airport='AER'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "0c2ad5a8-8005-4bd9-af12-bdbfb70310cb",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -306,13 +292,14 @@
        " ('AER', '319')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res"
+    "%sql SELECT DISTINCT arrival_airport, aircraft_code FROM flights f \\\n",
+    "        WHERE f.arrival_airport='AER'"
    ]
   },
   {
@@ -418,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "fb7da663-0244-49c1-8a11-72b662a1d872",
    "metadata": {
     "tags": []
@@ -431,20 +418,7 @@
       " * postgresql://reader:***@10.129.0.25/demo\n",
       "3 rows affected.\n"
      ]
-    }
-   ],
-   "source": [
-    "res = %sql SELECT distinct fare_conditions FROM ticket_flights tf \\\n",
-    "           JOIN flights f ON f.flight_id = tf.flight_id \\\n",
-    "           WHERE f.arrival_airport = 'SVO' AND departure_airport = 'AER'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "aed375f8-19c8-4fe3-850f-657946fc9b26",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -471,13 +445,15 @@
        "[('Business',), ('Comfort',), ('Economy',)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res"
+    " %sql SELECT distinct fare_conditions FROM ticket_flights tf \\\n",
+    "           JOIN flights f ON f.flight_id = tf.flight_id \\\n",
+    "           WHERE f.arrival_airport = 'SVO' AND departure_airport = 'AER'"
    ]
   },
   {
@@ -490,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "9b3390f1-db7b-4e2e-ae2f-d9b1766ebdb9",
    "metadata": {
     "tags": []
@@ -503,10 +479,34 @@
       " * postgresql://reader:***@10.129.0.25/demo\n",
       "1 rows affected.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>model</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Airbus A319-100</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Airbus A319-100',)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "res = %sql SELECT DISTINCT model FROM aircrafts a \\\n",
+    "%sql SELECT DISTINCT model FROM aircrafts a \\\n",
     "          JOIN flights f ON f.aircraft_code = a.aircraft_code \\\n",
     "          JOIN airports ap ON ap.airport_code = f.departure_airport \\\n",
     "          WHERE ap.city IN ('Yakutsk', 'Abakan') \\\n",
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "1a6a3adb-1dd1-4d5b-b8ef-fc2ce563397e",
    "metadata": {
     "tags": []
@@ -573,23 +573,7 @@
       " * postgresql://reader:***@10.129.0.25/demo\n",
       "5 rows affected.\n"
      ]
-    }
-   ],
-   "source": [
-    "res = %sql SELECT DISTINCT model FROM aircrafts a \\\n",
-    "      JOIN flights f ON f.aircraft_code = a.aircraft_code \\\n",
-    "      JOIN airports ap ON ap.airport_code = f.departure_airport \\\n",
-    "      WHERE city IN ('Yakutsk', 'Abakan')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "d78ff0f3-1d55-44e3-a53d-4a8deedcb4b4",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -626,13 +610,16 @@
        " ('Boeing 737-300',)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res"
+    "%sql SELECT DISTINCT model FROM aircrafts a \\\n",
+    "      JOIN flights f ON f.aircraft_code = a.aircraft_code \\\n",
+    "      JOIN airports ap ON ap.airport_code = f.departure_airport \\\n",
+    "      WHERE city IN ('Yakutsk', 'Abakan')"
    ]
   },
   {
@@ -647,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "a1d159ee-4631-4eee-8a61-b53f9386bd06",
    "metadata": {
     "tags": []
@@ -660,29 +647,7 @@
       " * postgresql://reader:***@10.129.0.25/demo\n",
       "5 rows affected.\n"
      ]
-    }
-   ],
-   "source": [
-    "res = %sql SELECT DISTINCT model FROM aircrafts a \\\n",
-    "            JOIN flights f ON f.aircraft_code = a.aircraft_code \\\n",
-    "            JOIN airports ap ON ap.airport_code = f.arrival_airport \\\n",
-    "            WHERE a.aircraft_code NOT IN( \\\n",
-    "                SELECT aircraft_code FROM flights \\\n",
-    "                WHERE arrival_airport IN(\\\n",
-    "                    SELECT airport_code FROM airports WHERE city = 'Yakutsk') \\\n",
-    "                OR departure_airport IN(\\\n",
-    "                    SELECT airport_code FROM airports WHERE city = 'Yakutsk'))\n",
-    "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "3d521b9d-8485-4555-b151-e22570ad05f1",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -719,13 +684,22 @@
        " ('Boeing 777-300',)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res"
+    "%sql SELECT DISTINCT model FROM aircrafts a \\\n",
+    "            JOIN flights f ON f.aircraft_code = a.aircraft_code \\\n",
+    "            JOIN airports ap ON ap.airport_code = f.arrival_airport \\\n",
+    "            WHERE a.aircraft_code NOT IN( \\\n",
+    "                SELECT aircraft_code FROM flights \\\n",
+    "                WHERE arrival_airport IN(\\\n",
+    "                    SELECT airport_code FROM airports WHERE city = 'Yakutsk') \\\n",
+    "                OR departure_airport IN(\\\n",
+    "                    SELECT airport_code FROM airports WHERE city = 'Yakutsk'))\n",
+    "            "
    ]
   },
   {
@@ -738,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "895ac0fe-512d-4daa-8378-f85995cb3880",
    "metadata": {
     "tags": []
@@ -751,23 +725,7 @@
       " * postgresql://reader:***@10.129.0.25/demo\n",
       "7 rows affected.\n"
      ]
-    }
-   ],
-   "source": [
-    "res = %sql SELECT departure_airport, arrival_airport FROM flights f\\\n",
-    "            JOIN ticket_flights tf ON tf.flight_id = f.flight_id \\\n",
-    "            JOIN tickets t ON t.ticket_no = tf.ticket_no \\\n",
-    "            WHERE passenger_name = 'ELLA DMITRIEVA'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "55ab515b-acaa-41f0-8112-73f554dedeef",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -781,15 +739,15 @@
        "    <tbody>\n",
        "        <tr>\n",
        "            <td>DME</td>\n",
-       "            <td>HMA</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>HMA</td>\n",
-       "            <td>DME</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>DME</td>\n",
        "            <td>UUS</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>DME</td>\n",
+       "            <td>HMA</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>HMA</td>\n",
+       "            <td>DME</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>SVO</td>\n",
@@ -811,22 +769,25 @@
        "</table>"
       ],
       "text/plain": [
-       "[('DME', 'HMA'),\n",
+       "[('DME', 'UUS'),\n",
+       " ('DME', 'HMA'),\n",
        " ('HMA', 'DME'),\n",
-       " ('DME', 'UUS'),\n",
        " ('SVO', 'SVX'),\n",
        " ('SVX', 'SVO'),\n",
        " ('SVX', 'MQF'),\n",
        " ('MQF', 'SVX')]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res"
+    "%sql SELECT departure_airport, arrival_airport FROM flights f\\\n",
+    "            JOIN ticket_flights tf ON tf.flight_id = f.flight_id \\\n",
+    "            JOIN tickets t ON t.ticket_no = tf.ticket_no \\\n",
+    "            WHERE passenger_name = 'ELLA DMITRIEVA'"
    ]
   },
   {
